[gd_scene load_steps=6 format=3 uid="uid://dfka41tbpfqnx"]

[ext_resource type="SpriteFrames" uid="uid://ht0kyqp1qa1d" path="res://Sprites/SpriteFrames/new_sprite_frames.tres" id="1_sese1"]
[ext_resource type="Script" uid="uid://bfdwhcl4vbah1" path="res://Prefabs/unit_hologram.gd" id="2_1xl1e"]
[ext_resource type="Theme" uid="uid://bjlwyn8on7k4k" path="res://Prefabs/StatusTheme.tres" id="4_h6myo"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_o2s4o"]

[sub_resource type="ViewportTexture" id="ViewportTexture_vcocj"]
viewport_path = NodePath("Status Bar/Sprite3D/SubViewport")

[node name="BattleHologram" type="AnimatedSprite3D"]
modulate = Color(1, 1, 1, 0.39215687)
pixel_size = 0.001
billboard = 2
sprite_frames = ExtResource("1_sese1")
animation = &"windup"
script = ExtResource("2_1xl1e")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0)
shape = SubResource("CylinderShape3D_o2s4o")

[node name="Status Bar" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3217432, 0)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="Status Bar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6653954, 0)
pixel_size = 0.003
billboard = 1
texture = SubResource("ViewportTexture_vcocj")

[node name="SubViewport" type="SubViewport" parent="Status Bar/Sprite3D"]
transparent_bg = true

[node name="Health Bar" type="ProgressBar" parent="Status Bar/Sprite3D/SubViewport"]
visible = false
custom_minimum_size = Vector2(0, 50)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -182.17001
offset_right = -31.0
offset_bottom = -132.16953
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_h6myo")
max_value = 1.0
value = 1.0

[connection signal="input_event" from="Area3D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_mouse_exited"]
